error
src/f_client.cc: In member function ‘f_client::fdownload_t f_client::connect(int, int, int)’:
src/f_client.cc:14:41: error: cannot convert ‘sockaddr’ to ‘int’
   14 |   if (connect(sockfd, getPeerAddressIPv4(), sizeof(getPeerAddressIPv4())) < 0) {
      |                       ~~~~~~~~~~~~~~~~~~^~
      |                                         |
      |                                         sockaddr
src/f_client.cc:9:35: note:   initializing argument 2 of ‘f_client::fdownload_t f_client::connect(int, int, int)’
    9 | f_client::connect(int domain, int type, int protocol) noexcept(false)
      |                               ~~~~^~~~
src/f_client.cc: In member function ‘short unsigned int f_client::fdownload::getFile()’:
src/f_client.cc:33:8: error: ‘_socket_fd’ was not declared in this scope; did you mean ‘_socket’?
   33 |   send(_socket_fd, &rh, sizeof(rh.fp_length) + rh.fp_length, 0);
      |        ^~~~~~~~~~
      |        _socket
src/f_client.cc:36:8: error: ‘ssize_t’ is not a member of ‘std’; did you mean ‘size_t’?
   36 |   std::ssize_t returned = recv(_socket_fd, &respond, sizeof(responding_header), 0);
      |        ^~~~~~~
      |        size_t
src/f_client.cc:37:7: error: ‘returned’ was not declared in this scope
   37 |   if (returned != sizeof(responding_header))
      |       ^~~~~~~~
src/f_client.cc:43:44: error: ‘ios_base’ has not been declared
   43 |   std::fstream *local_file = open(_dentry, ios_base::out | ios_base::trun | ios_base::binary);
      |                                            ^~~~~~~~
src/f_client.cc:43:60: error: ‘ios_base’ has not been declared
   43 |   std::fstream *local_file = open(_dentry, ios_base::out | ios_base::trun | ios_base::binary);
      |                                                            ^~~~~~~~
src/f_client.cc:43:77: error: ‘ios_base’ has not been declared
   43 |   std::fstream *local_file = open(_dentry, ios_base::out | ios_base::trun | ios_base::binary);
      |                                                                             ^~~~~~~~
src/f_client.cc:51:11: error: ‘returned’ was not declared in this scope
   51 |   while ((returned = recv(_socket_fd, _download_buffer, _db_size, 0)) > 0) {
      |           ^~~~~~~~
make: *** [f_client.o] Error 1
